--- a/ananas/src/main/res/layout/view_text_sticker_item.xml
+++ b/ananas/src/main/res/layout/view_text_sticker_item.xml
@@ -29,6 +29,8 @@
         android:layout_height="@dimen/delete_icon_size"
         android:layout_gravity="top|start"
         android:elevation="@dimen/elevation_2dp"
-        android:src="@drawable/ic_close" />
+        android:src="@drawable/cancel_text_sticker"
+        android:backgroundTint="@color/materialcolorpicker__red"
+        />
 
 </FrameLayout>
