--- a/ananas/src/main/res/drawable/cancel_text_sticker.xml
+++ b/ananas/src/main/res/drawable/cancel_text_sticker.xml
@@ -1,9 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="511.76dp"
-    android:height="511.76dp"
-    android:viewportWidth="511.76"
-    android:viewportHeight="511.76">
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
   <path
-      android:fillColor="#26324A"
-      android:pathData="M436.896,74.869c-99.84,-99.819 -262.208,-99.819 -362.048,0c-99.797,99.819 -99.797,262.229 0,362.048c49.92,49.899 115.477,74.837 181.035,74.837s131.093,-24.939 181.013,-74.837C536.715,337.099 536.715,174.688 436.896,74.869zM361.461,331.317c8.341,8.341 8.341,21.824 0,30.165c-4.16,4.16 -9.621,6.251 -15.083,6.251c-5.461,0 -10.923,-2.091 -15.083,-6.251l-75.413,-75.435l-75.392,75.413c-4.181,4.16 -9.643,6.251 -15.083,6.251c-5.461,0 -10.923,-2.091 -15.083,-6.251c-8.341,-8.341 -8.341,-21.845 0,-30.165l75.392,-75.413l-75.413,-75.413c-8.341,-8.341 -8.341,-21.845 0,-30.165c8.32,-8.341 21.824,-8.341 30.165,0l75.413,75.413l75.413,-75.413c8.341,-8.341 21.824,-8.341 30.165,0c8.341,8.32 8.341,21.824 0,30.165l-75.413,75.413L361.461,331.317z"/>
+      android:pathData="M0,256a256,255.832 0,1 0,512 0a256,255.832 0,1 0,-512 0z"
+      android:fillColor="#76BF4E"/>
+  <path
+      android:pathData="M376.812,337.181l-39.592,39.592l-201.999,-201.999l39.592,-39.592z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M376.818,174.825l-201.999,201.999l-39.592,-39.592l201.999,-201.999z"
+      android:fillColor="#FFFFFF"/>
 </vector>
