--- a/ananas/src/main/res/values/colors.xml
+++ b/ananas/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="text_color">#BEC2C4</color>
     <color name="text_color_gray_3">#A6A5A5</color>
 
-    <color name="primary_color">#26324A</color>
+    <color name="primary_color_image_edi">#26324A</color>
     <color name="sec_color">#76BF4E</color>
 
 
